fix login box width on mobile, add SSL log

--- a/src/public/scss/login-user-main.scss
+++ b/src/public/scss/login-user-main.scss
@@ -23,9 +23,8 @@ body {
         color: #FFFFFF;
 
         @media (max-width: 750px) {
-            /* On mobile, login-center should be 100% width */
-            width: 100%;
-            padding: 10px;
+            /* On mobile, login-center should be 90% width */
+            width: 90%;
         }
     }
 }
